1.78
-----------------
Use new style tags for monitoring packages.


1.77
-----------------
Stage crumbs (but not chunks) on xroot.
Make more smaller crumbs.
Fail fast if too many chunks.
Don't make ft2Txt file.


1.76
-----------------
Retry failed DB connections.
genericScript.py catches exceptions in the main function and does cleanup.
Convert findChunks to use genericScript.py, with a cleanup routine that
removes the throttle and run lock if status != 0, so it's safe to autoretry.
Enable autoretry on findChunks.
Invoke locking preexec script with 'python script' instead of 'script' with a
shebang. Hopefully this will stop the "bad interpreter" error messages.

1.75
-----------------
Make ft1 on chunks.
Add diffuse response to ft1.
Make our own gap file.
Add quality and config to ft2.
Creating filtered Merit files (photons only, for now).
Move a bunch of stuff from setSuccessful to setRunning.
Allow specifying the version to fileNames.fileName.
Add version to chunk file names (but it's always 0 at the mo).
Tweak hsplit to work around ROOT 5.20 issue.
Allow data catalog type to differ from group.
Allow attaching extra metadata when registering files - use to specify cut for filtered merit.
fileNames.fileName can get file name from a variable, if so it overrides the normal rules.
Allow execing scripts instead of including them in the XML. Shouldn't use this for prod.
Add P100-FT2 task.
Start work on genericScript to reduce boilerplate [not yet].
Use pass7 cuts for ft1 and electrons [backed out of].


1.74
-----------------
Removing the chunk-based HOSTLIST.
unlockThrottle doesn't fail if the throttle lock has already been removed.


1.73
-----------------
Adding an automatic throttling mechanism.


1.72
-----------------
Adding the machinery to run the Verify-for-ft2 package.
Versionize crumb files. [LONE-132@JIRA]
Fix LD_LIBRARY_PATH for tree merges.


1.71
-----------------
Set retries in config.py (it still gets hardcoded in the XML at install time).